Closed Bug 569604 Opened 14 years ago Closed 14 years ago

nsObjectFrame.cpp compilation failure on mingw-w64 due to pointer to int cast loosing precision.

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b1

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(2 files)

Attached patch fix v1.0Splinter Review
I get following error:

layout/generic/nsObjectFrame.cpp:1789:43: error: cast from 'WINDOWPOS*' to 'uint32' loses precision

The obvious fix is a proper cast.
Attachment #448762 - Attachment is patch: true
Attachment #448762 - Flags: review?(joshmoz)
Attachment #448762 - Flags: review?(joshmoz) → review+
Thanks for quick review.
Keywords: checkin-needed
Assignee: nobody → jacek
Blocks: 570342
The patch rebased against current m-c.
http://hg.mozilla.org/mozilla-central/rev/edf71f1401a0
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Target Milestone: mozilla1.9.3a5 → mozilla1.9.3a6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: