Bug 569604 - Fix compilation failure on mingw-w64 due to pointer to int cast loosing precision. r=josh